Disable JS/CSS caching and add cache-busting

--- a/nginx.conf
+++ b/nginx.conf
@@ -18,8 +18,13 @@ server {
     proxy_set_header X-Forwarded-Proto $scheme;
   }
 
-  location ~* \.(js|css|png|jpg|jpeg|gif|svg)$ {
+  location ~* \.(png|jpg|jpeg|gif|svg)$ {
     expires 30d;
     add_header Cache-Control "public";
+  }
+
+  location ~* \.(js|css)$ {
+    expires -1;
+    add_header Cache-Control "no-cache";
   }
 }
