Improve rota UX and onboarding with profiles and signed reports

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,5 @@ SMTP_FROM=torre-tempo@example.com
 CERT_P12_PATH=/data/certs/company.p12
 CERT_P12_PASSWORD=change-me
 CERT_STORAGE_DIR=/data/certs
+SELFIE_STORAGE_DIR=/data/selfies
+SIGNATURE_STORAGE_DIR=/data/signatures
