--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,24 +13,30 @@
     "clean": "rm -rf dist .turbo"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1",
-    "zustand": "^4.4.7",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@tanstack/react-query": "^5.17.9",
     "axios": "^1.6.5",
     "date-fns": "^3.0.6",
-    "zod": "^3.22.4",
+    "html2canvas": "^1.4.1",
     "i18next": "^23.7.16",
-    "react-i18next": "^14.0.1"
+    "react": "^18.2.0",
+    "react-big-calendar": "^1.19.4",
+    "react-dom": "^18.2.0",
+    "react-i18next": "^14.0.1",
+    "react-router-dom": "^6.21.1",
+    "zod": "^3.22.4",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.47",
+    "@types/react-big-calendar": "^1.16.3",
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.56.0",
     "typescript": "^5.3.3",
     "vite": "^5.0.11",
-    "vitest": "^1.1.3",
-    "eslint": "^8.56.0"
+    "vitest": "^1.1.3"
   }
 }
