--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -20,44 +20,44 @@
     "db:studio": "prisma studio"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "express-rate-limit": "^7.1.5",
-    "jsonwebtoken": "^9.0.2",
-    "bcrypt": "^5.1.1",
-    "speakeasy": "^2.0.0",
-    "qrcode": "^1.5.3",
     "@prisma/client": "^5.8.0",
-    "zod": "^3.22.4",
+    "bcrypt": "^5.1.1",
+    "bullmq": "^5.1.5",
+    "cors": "^2.8.5",
+    "date-fns": "^3.0.6",
+    "date-fns-tz": "^3.2.0",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "handlebars": "^4.7.8",
+    "helmet": "^7.1.0",
+    "i18next": "^23.7.16",
+    "ioredis": "^5.3.2",
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.10.1",
     "pino": "^8.17.2",
     "pino-http": "^8.6.1",
     "pino-pretty": "^10.3.1",
-    "date-fns": "^3.0.6",
-    "date-fns-tz": "^3.2.0",
-    "bullmq": "^5.1.5",
-    "ioredis": "^5.3.2",
-    "nodemailer": "^6.9.7",
-    "i18next": "^23.7.16",
-    "handlebars": "^4.7.8"
+    "qrcode": "^1.5.3",
+    "speakeasy": "^2.0.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
     "@types/bcrypt": "^5.0.2",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/nodemailer": "^6.4.14",
-    "@types/node": "^20.10.6",
-    "typescript": "^5.3.3",
-    "tsx": "^4.7.0",
-    "prisma": "^5.8.0",
-    "jest": "^29.7.0",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
-    "ts-jest": "^29.1.1",
-    "supertest": "^6.3.3",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20.10.6",
+    "@types/nodemailer": "^6.4.22",
     "@types/supertest": "^6.0.2",
-    "eslint": "^8.56.0",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
-    "@typescript-eslint/parser": "^6.17.0"
+    "@typescript-eslint/parser": "^6.17.0",
+    "eslint": "^8.56.0",
+    "jest": "^29.7.0",
+    "prisma": "^5.8.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.3"
   }
 }
