feat: add broadcast swap, email notifications, and OneSignal push notifications
- Add broadcast swap to all employees with same role
- Add email notifications for shift swap requests (ES/EN)
- Add OneSignal push notification integration
- Add employee names in shift cards on mobile
- Fix print layout for mobile schedules
- Make swap button always visible
- Add dynamic employee column widths
- Add OneSignal player ID to user schema
- Add user routes for OneSignal player ID management

All features fully implemented and tested locally.

--- a/apps/web/.env.production
+++ b/apps/web/.env.production
@@ -1,2 +1,5 @@
 # API Base URL - Production VPS
 VITE_API_BASE_URL=https://time.lsltgroup.es/api/v1
+
+# OneSignal Push Notifications
+VITE_ONESIGNAL_APP_ID=your_onesignal_app_id
