--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -1,2 +1,5 @@
 # API Base URL
 VITE_API_BASE_URL=http://localhost:3000/api/v1
+
+# OneSignal Push Notifications
+VITE_ONESIGNAL_APP_ID=your_onesignal_app_id
