MAJOR: Professional PDF generation - Replace browser print with high-quality PDF download

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^3.0.6",
     "html2canvas": "^1.4.1",
     "i18next": "^23.7.16",
+    "jspdf": "^4.1.0",
     "react": "^18.2.0",
     "react-big-calendar": "^1.19.4",
     "react-dom": "^18.2.0",
