--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,7 +10,8 @@
     "test": "vitest",
     "lint": "eslint . --ext ts,tsx",
     "lint:fix": "eslint . --ext ts,tsx --fix",
-    "clean": "rm -rf dist .turbo"
+    "clean": "rm -rf dist .turbo",
+    "i18n:validate": "node ../../scripts/validate-translations.js"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
