--- a/nginx/nginx.prod.conf
+++ b/nginx/nginx.prod.conf
@@ -40,7 +40,7 @@ http {
     # HTTP server - redirect to HTTPS
     server {
         listen 80;
-        server_name time.lsltgroup.es time.lsltapps.com;
+        server_name time.lsltgroup.es;
 
         # ACME challenge for Certbot
         location /.well-known/acme-challenge/ {
@@ -62,101 +62,6 @@ http {
         # SSL certificates
         ssl_certificate /etc/letsencrypt/live/time.lsltgroup.es/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/time.lsltgroup.es/privkey.pem;
-
-        # SSL configuration (Mozilla Intermediate)
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
-        ssl_prefer_server_ciphers off;
-        ssl_session_cache shared:SSL:10m;
-        ssl_session_timeout 10m;
-        ssl_stapling on;
-        ssl_stapling_verify on;
-
-        # Security headers
-        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-        add_header X-Frame-Options "SAMEORIGIN" always;
-        add_header X-Content-Type-Options "nosniff" always;
-        add_header X-XSS-Protection "1; mode=block" always;
-        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-
-        # API endpoints
-        location /api/ {
-            limit_req zone=api_limit burst=20 nodelay;
-
-            proxy_pass http://api_backend;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-
-            # Timeouts
-            proxy_connect_timeout 60s;
-            proxy_send_timeout 60s;
-            proxy_read_timeout 60s;
-        }
-
-        # Login endpoint (stricter rate limiting)
-        location /api/v1/auth/login {
-            limit_req zone=login_limit burst=2 nodelay;
-
-            proxy_pass http://api_backend;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        # Health check (no rate limiting)
-        location /health {
-            proxy_pass http://api_backend/health;
-            proxy_http_version 1.1;
-            access_log off;
-        }
-
-        # Frontend (React SPA) - NO CACHING for HTML
-        location / {
-            proxy_pass http://web_backend;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # CRITICAL: Prevent HTML caching
-            add_header Cache-Control "no-cache, no-store, must-revalidate" always;
-            add_header Pragma "no-cache" always;
-            add_header Expires "0" always;
-        }
-
-        # Hashed assets (JS/CSS with version hash) - LONG cache
-        # Vite generates: index-ABC123.js, index-XYZ789.css
-        location ~* /assets/.*-[a-zA-Z0-9_-]+\.(js|css)$ {
-            proxy_pass http://web_backend;
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-        }
-
-        # Static assets (images, fonts) - MODERATE cache
-        location ~* \.(png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-            proxy_pass http://web_backend;
-            expires 30d;
-            add_header Cache-Control "public";
-        }
-    }
-
-    # HTTPS server - time.lsltapps.com
-    server {
-        listen 443 ssl;
-        http2 on;
-        server_name time.lsltapps.com;
-
-        # SSL certificates
-        ssl_certificate /etc/letsencrypt/live/time.lsltapps.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/time.lsltapps.com/privkey.pem;
 
         # SSL configuration (Mozilla Intermediate)
         ssl_protocols TLSv1.2 TLSv1.3;
