feat: Serve time.lsltapps.com alongside time.lsltgroup.es
- Both domains now served by same HTTPS server block
- Shared SSL certificate (time.lsltgroup.es cert covers both via symlink)
- HTTP redirects to HTTPS for both domains
- Identical functionality on both domains

--- a/nginx/nginx.prod.conf
+++ b/nginx/nginx.prod.conf
@@ -53,11 +53,11 @@ http {
         }
     }
 
-    # HTTPS server - time.lsltgroup.es
+    # HTTPS server - Both domains share same certificate
     server {
         listen 443 ssl;
         http2 on;
-        server_name time.lsltgroup.es;
+        server_name time.lsltgroup.es time.lsltapps.com;
 
         # SSL certificates
         ssl_certificate /etc/letsencrypt/live/time.lsltgroup.es/fullchain.pem;
