fix: Add time.lsltapps.com to HTTP server for ACME challenge

--- a/nginx/nginx.prod.conf
+++ b/nginx/nginx.prod.conf
@@ -40,7 +40,7 @@ http {
     # HTTP server - redirect to HTTPS
     server {
         listen 80;
-        server_name time.lsltgroup.es;
+        server_name time.lsltgroup.es time.lsltapps.com;
 
         # ACME challenge for Certbot
         location /.well-known/acme-challenge/ {
