feat: Use multi-domain SSL certificate for both time.lsltgroup.es and time.lsltapps.com

--- a/nginx/nginx.prod.conf
+++ b/nginx/nginx.prod.conf
@@ -59,9 +59,9 @@ http {
         http2 on;
         server_name time.lsltgroup.es time.lsltapps.com;
 
-        # SSL certificates
-        ssl_certificate /etc/letsencrypt/live/time.lsltgroup.es/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/time.lsltgroup.es/privkey.pem;
+        # SSL certificates (multi-domain: time.lsltgroup.es + time.lsltapps.com)
+        ssl_certificate /etc/letsencrypt/live/time.lsltgroup.es-0001/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/time.lsltgroup.es-0001/privkey.pem;
 
         # SSL configuration (Mozilla Intermediate)
         ssl_protocols TLSv1.2 TLSv1.3;
