--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -62,6 +62,7 @@
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.56.0",
+    "rollup-plugin-visualizer": "^6.0.5",
     "typescript": "^5.3.3",
     "vite": "^5.0.11",
     "vitest": "^1.1.3"
