--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -39,6 +39,7 @@
     "pino-pretty": "^10.3.1",
     "qrcode": "^1.5.3",
     "speakeasy": "^2.0.0",
+    "stripe": "^20.3.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
