--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -28,6 +28,7 @@
     "date-fns-tz": "^3.2.0",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
+    "gocardless-nodejs": "^7.0.0",
     "handlebars": "^4.7.8",
     "helmet": "^7.1.0",
     "i18next": "^23.7.16",
