--- a/nginx/nginx.prod.conf
+++ b/nginx/nginx.prod.conf
@@ -83,7 +83,7 @@ http {
         location /api/ {
             limit_req zone=api_limit burst=20 nodelay;
 
-            proxy_pass http://api_backend;
+            proxy_pass http://api_backend/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -102,7 +102,7 @@ http {
         location /api/v1/auth/login {
             limit_req zone=login_limit burst=2 nodelay;
 
-            proxy_pass http://api_backend;
+            proxy_pass http://api_backend/v1/auth/login;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
