--- a/nginx/nginx.prod.conf
+++ b/nginx/nginx.prod.conf
@@ -79,11 +79,11 @@ http {
         add_header X-XSS-Protection "1; mode=block" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 
-        # API endpoints
+        # API endpoints - Forward to /api/v1/ prefix
         location /api/ {
             limit_req zone=api_limit burst=20 nodelay;
 
-            proxy_pass http://api_backend/;
+            proxy_pass http://api_backend/api/v1/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -99,10 +99,10 @@ http {
         }
 
         # Login endpoint (stricter rate limiting)
-        location /api/v1/auth/login {
+        location /api/auth/login {
             limit_req zone=login_limit burst=2 nodelay;
 
-            proxy_pass http://api_backend/v1/auth/login;
+            proxy_pass http://api_backend/api/v1/auth/login;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
